--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'checkstyle'
 }
 
 group = 'ru.romanov'
@@ -9,6 +10,15 @@ repositories {
     mavenCentral()
 }
 
+checkstyle {
+    toolVersion = '10.12.3'
+    configFile = file('config/checkstyle/checkstyle.xml')
+}
+
+checkstyleMain {
+    source ='src/main/java'
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -16,8 +26,11 @@ configurations {
 }
 
 dependencies {
+    implementation name: 'checkstyle', group: 'com.puppycrawl.tools', version: '10.12.3'
+
     compileOnly 'org.projectlombok:lombok:1.18.28'
     annotationProcessor 'org.projectlombok:lombok:1.18.28'
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
